traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:10: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
              return true
                     ^Snake:10: warning: enclosing method positionFinale has result type Unit: return value discarded
              return true
              ^Snake:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
            return false
                   ^Snake:13: warning: enclosing method positionFinale has result type Unit: return value discarded
            return false
            ^Snake:20: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
              return true
                     ^Snake:20: warning: enclosing method positionFinale has result type Unit: return value discarded
              return true
              ^Snake:23: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
            return false
                   ^Snake:23: warning: enclosing method positionFinale has result type Unit: return value discarded
            return false
            ^Snake:28: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^Snake:28: warning: enclosing method positionFinale has result type Unit: return value discarded
    return false
    ^Snake:34: error: value unary_! is not a member of Unit
  while(!positionFinale())
        ^